--- a/catalog.html
+++ b/catalog.html
@@ -35,8 +35,9 @@
 				<span class="tel">8 812 450-25-25</span>
 			</div>
 		</div>
-	</header>
 	<!--Блок шапки-->
+	</header>
+	<!--Блок хлебных крошек-->
 	<div class="breadcrumbs container">
 		<ul class="main-nav">
 			<li>
@@ -49,7 +50,9 @@
 				<a href="#">Сливочное</a>
 			</li>
 		</ul>
+	<!--/Блок хлебных крошек-->
 	</div>
+	<!--Блок выбора мороженных - фильтр-->
 	<div class="selection-ice container">
 		<form action="https://echo.htmlacademy.ru" method="get" enctype="multipart/form-data" oninput="ruoutput.value=rucount.value">
 			<h2>Сливочное мороженное</h2>
@@ -96,9 +99,10 @@
 			</label>
 			<a href="#">Применить</a>
 		</form>
+	<!--/Блок выбора мороженных-->
 	</div>
+	<!--Блок ассортимента мороженных-->
 	<div class="goods container clearfix">
-		
 			<div class="case-catalog">
 				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
@@ -204,7 +208,7 @@
 					<li><a href"#">5</a></li>
 				</ul>
 			</div>
-		
+	<!--/Блок ассортимента мороженных-->
 	</div>
 	<!--Блок подвала-->
 	<footer>
