--- a/catalog.html
+++ b/catalog.html
@@ -37,6 +37,7 @@
 		</div>
 	<!--Блок шапки-->
 	</header>
+	<main class="container">
 	<!--Блок хлебных крошек-->
 	<div class="breadcrumbs container">
 		<ul class="main-nav">
@@ -210,11 +211,12 @@
 			</div>
 	<!--/Блок ассортимента мороженных-->
 	</div>
+	</main>
 	<!--Блок подвала-->
 	<footer>
 		<div class="container clearfix">
 			<section class="footer-social">
-				<a class="social-btn social-btn-inst" href="#">Твиттер</a>
+				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
 				<a class="social-btn social-btn-inst" href="https://instagram.com">Инстаграм</a>
 				<a class="social-btn social-btn-vk" href="https://vk.com">Вконтакте</a>
 				<a class="social-btn social-btn-fb" href="https://facebook.com">Фейсбук</a>
