--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@
 				<span class="tel">8 812 450-25-25</span>
 			</div>
 		</div>
-	</header>
 	<!--/Блок шапки-->
+	</header>
+	<main class="container">
 	<div class="ad container clearfix"><!--advertising реклама-->
 		<div class="choice-ice">
 			<h2>Крем-брюле и пломбир с малиновым джемом</h2>
@@ -74,8 +75,8 @@
 			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
 			<a href="#">Хочу шоколадки!</a>
 		</div>
-	</div>
 	<!--/Блок промо акции-->
+	</div>
 	<!--Блок самых покупаемых мороженных-->
 	<div class="catalog container clearfix">
 		<section class="catalog-ice">
@@ -102,10 +103,10 @@
 			<b>415 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
 		</section>
-	</div>
 	<!--/Блок самых покупаемых мороженных-->
+	</div>
 	<!--Блок описания компании-->
-	<div class="description container clearfix">
+	<div class="description clearfix">
 		<div class="about">
 			<span>Магазин Глейси - это онлайн и офлайн магазин по продаже мороженого собственного производства на развес</span>
 		</div>
@@ -117,8 +118,8 @@
 			<p>Закупка ингредиентов производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</p>
 			<p>Доставка нашего мороженного до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет ему сохранить свой превосходный вкус.</p>
 		</div>
-	</div>
 	<!--/Блок описания компании-->
+	</div>
 	<!--Блок новостей и подписка на рассылку-->
 	<div class="news-sub container clearfix">
 		<section class="news">
@@ -132,11 +133,10 @@
 				<button name="send">Отправить</button>
 			</form>
 		</section>
-	</div>
 	<!--/Блок новостей и подписка на рассылку-->
+	</div>
 	<!--Блок проезда-адреса-->
-	<div class="driving-address">
-		
+	<div class="driving-address">	
 		<section class="driving">
           Адрес главного офиса и<br>
 		  Офлайн магазина<br>
@@ -147,9 +147,9 @@
 		  (с 10 до 20 ежедневно)<br>
           <a href="#">Форма обратной связи</a>
 		</section>
-		
+	<!--/Блок проезда-адреса-->	
 	</div>
-	<!--/Блок проезда-адреса-->
+	</main>
 	<!--Блок подвала-->
 	<footer>
 		<div class="container clearfix">
