отцентровал шапку и подвал

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 	<!--Блок шапки-->
-	<header class="main-header">
+	<header class="main-header container">
 		<div class="container clearfix">
 			<div class="header-logo">
 			  <img src="img/logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
@@ -151,7 +151,7 @@
 	</div>
 	</main>
 	<!--Блок подвала-->
-	<footer>
+	<footer class="container">
 		<div class="container clearfix">
 			<section class="footer-social">
 				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
