--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
 	<!--Блок шапки-->
-	<header class="main-header container">
+	<header class="main-header">
 		<div class="container clearfix">
 			<div class="header-logo">
 			  <img src="img/logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
@@ -38,7 +38,7 @@
 	<!--/Блок шапки-->
 	</header>
 	<main class="container">
-	<div class="ad container clearfix"><!--advertising реклама-->
+	<div class="ad clearfix"><!--advertising реклама-->
 		<div class="choice-ice">
 			<h2>Крем-брюле и пломбир с малиновым джемом</h2>
 		</div>
@@ -64,7 +64,7 @@
 		</div>
 	</div>
 	<!--Блок промо акции-->
-	<div class="promo container clearfix">
+	<div class="promo clearfix">
 		<div class="promo-action">
 			<b>Малинка даром!</b>
 			<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
@@ -78,7 +78,7 @@
 	<!--/Блок промо акции-->
 	</div>
 	<!--Блок самых покупаемых мороженных-->
-	<div class="catalog container clearfix">
+	<div class="catalog clearfix">
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
 			<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
@@ -121,7 +121,7 @@
 	<!--/Блок описания компании-->
 	</div>
 	<!--Блок новостей и подписка на рассылку-->
-	<div class="news-sub container clearfix">
+	<div class="news-sub clearfix">
 		<section class="news">
 			<p>Новое в нашем блоке</p>
 			<a href="#">10 способов сервировки фруктовых щербетов к столу</a>
@@ -135,6 +135,7 @@
 		</section>
 	<!--/Блок новостей и подписка на рассылку-->
 	</div>
+	</main>
 	<!--Блок проезда-адреса-->
 	<div class="driving-address">	
 		<section class="driving">
@@ -149,9 +150,9 @@
 		</section>
 	<!--/Блок проезда-адреса-->	
 	</div>
-	</main>
+	
 	<!--Блок подвала-->
-	<footer class="container">
+	<footer>
 		<div class="container clearfix">
 			<section class="footer-social">
 				<a class="social-btn social-btn-tv" href="#">Твиттер</a>
