--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
   	<header class="main-header">
 		<div class="container clearfix">
 			<div class="header-logo">
-			  <img src="img/logo.png" width="205" height="55" alt="Глейси">
+			  <img src="img/logo.png" width="154" height="64" alt="Логотип Глейси">
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
@@ -37,6 +37,7 @@
 		</div>
 	<!--Блок шапки-->
 	</header>
+	<!--Содержание основного блока-->
 	<main class="container">
 	<!--Блок хлебных крошек-->
 	<div class="breadcrumbs">
@@ -105,7 +106,7 @@
 	<!--Блок ассортимента мороженных-->
 	<div class="goods clearfix">
 			<div class="case-catalog">
-				<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+				<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 				<b>310 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
 				<div>
@@ -113,7 +114,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_2.jpg" alt="Сливочно-кофейное с кусочками шоколада">
+				<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 				<b>380 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-кофейное с кусочками шоколада</a>
 				<div>
@@ -121,7 +122,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+				<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-клубничное с присыпкой из белого шоколада</a>
 				<div>
@@ -129,7 +130,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_4.jpg" alt="Сливочное крем-брюле с карамельной подливкой">
+				<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 				<b>415 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное крем-брюле с карамельной подливкой</a>
 				<div>
@@ -137,7 +138,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_5.jpg" alt="Сливочное с брусничным джемом">
+				<img src="img/ice_5.jpg" width="267" height="267" alt="Сливочное с брусничным джемом">
 				<b>325 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с брусничным джемом</a>
 				<div>
@@ -145,7 +146,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_6.jpg" alt="Сливочно-черничное с цельными ягодами черники">
+				<img src="img/ice_6.jpg" width="267" height="267" alt="Сливочно-черничное с цельными ягодами черники">
 				<b>410 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-черничное с цельными ягодами черники</a>
 				<div>
@@ -153,7 +154,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_7.jpg" alt="Сливочно-лимонное с карамельной присыпкой">
+				<img src="img/ice_7.jpg" width="267" height="267" alt="Сливочно-лимонное с карамельной присыпкой">
 				<b>375 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-лимонное с карамельной присыпкой</a>
 				<div>
@@ -161,7 +162,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_8.jpg" alt="Сливочное с шоколадной стружкой">
+				<img src="img/ice_8.jpg" width="267" height="267" alt="Сливочное с шоколадной стружкой">
 				<b>320 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с шоколадной стружкой</a>
 				<div>
@@ -169,7 +170,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_9.jpg" alt="Сливочно-ванильное с кусочками шоколада">
+				<img src="img/ice_9.jpg" width="267" height="267" alt="Сливочно-ванильное с кусочками шоколада">
 				<b>440 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочно-ванильное с кусочками шоколада</a>
 				<div>
@@ -177,7 +178,7 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_10.jpg" alt="Сливочное с ментоловым сиропом">
+				<img src="img/ice_10.jpg" width="267" height="267" alt="Сливочное с ментоловым сиропом">
 				<b>435 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с ментоловым сиропом</a>
 				<div>
@@ -185,15 +186,17 @@
 				</div>
 			</div>
 			<div class="case-catalog">
-				<img src="img/ice_11.jpg" alt="Сливочное с кусочками черного шоколада">
+				<img src="img/ice_11.jpg" width="267" height="267" alt="Сливочное с кусочками черного шоколада">
 				<b>355 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с кусочками черного шоколада</a>
 				<div>
 				<a href="#" class="fastsee">Быстрый просмотр</a>
 				</div>
 			</div>
+			<div>
+			</div>
 			<div class="case-catalog">
-				<img src="img/ice_12.jpg" alt="Сливочное с мятным сиропом">
+				<img src="img/ice_12.jpg" width="267" height="267" alt="Сливочное с мятным сиропом">
 				<b>420 <!--Как знак рубля ставить?--> / кг</b>
 				<a href="#">Сливочное с мятным сиропом</a>
 				<div>
@@ -210,6 +213,7 @@
 				</ul>
 			</div>
 	<!--/Блок ассортимента мороженных-->
+	
 	</div>
 	</main>
 	<!--Блок подвала-->
