--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<header class="main-header">
 		<div class="container clearfix">
 			<div class="header-logo">
-			  <img src="img/logo.png" width="205" height="55" alt="Барбершоп «Бородинский»">
+			  <img src="img/logo.png" width="154" height="64" alt="Логотип Глейси">
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
@@ -81,25 +81,25 @@
 	<div class="catalog clearfix">
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
-			<img src="img/ice_1.jpg" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
+			<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
 			<b>310 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
 		</section>	
 		<section class="catalog-ice">
 		<span class="tag">ХИТ</span> <!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
-			<img src="img/ice_2.jpg" alt="Сливочно-кофейное с кусочками шоколада">
+			<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
 			<b>318 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
-			<img src="img/ice_3.jpg" alt="Сливочно-клубничное с присыпкой из белого шоколада">
+			<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
 			<b>355 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
-			<img src="img/ice_4.jpg" alt="Сливочное крем-брюле с карамельной подливкой">
+			<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
 			<b>415 <!--Какой символ рубля?-->/кг</b>
 			<p>Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
 		</section>
@@ -137,8 +137,10 @@
 	</div>
 	</main>
 	<!--Блок проезда-адреса-->
-	<div class="driving-address">	
-		<section class="driving">
+	<div class="driving-address">
+		<!--<div class="marker"><!--<img src="img/marker.png" alt="Указатель местонахождения">
+		</div>-->
+		<div class="driving">
           Адрес главного офиса и<br>
 		  Офлайн магазина<br>
 		  <strong>ул. Большая Конющенная<br>
@@ -147,7 +149,7 @@
 		  8 812 450-25-25<br>
 		  (с 10 до 20 ежедневно)<br>
           <a href="#">Форма обратной связи</a>
-		</section>
+		</div>
 	<!--/Блок проезда-адреса-->	
 	</div>
 	
