--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Главная Gllacy</title>
+	<link href="https://fonts.googleapis.com/css?family=Roboto:400,500,700&amp;subset=cyrillic" rel="stylesheet">
+	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
   </head>
   <body>
@@ -14,15 +16,9 @@
 			</div>
 			<nav class="main-navigation">
 			  <ul class="main-nav">
-				<li>
-				  <a href="#">Каталог</a>
-				</li>
-				<li>
-				  <a href="#">Доставка и оплата</a>
-				</li>
-				<li>
-				  <a href="#">О Компании</a>
-				</li>
+				<li><a href="#">Каталог</a></li>
+				<li><a href="#">Доставка и оплата</a></li>
+				<li><a href="#">О Компании</a></li>
 			  </ul>
 			</nav>
 			<div class="user-block">
@@ -164,14 +160,14 @@
 			</section>
 			<section class="footer-contacts">
 				<ul class="footer-main">
-					<li><a href="#">Для поставщиков</a></li>
-					<li><a href="#">О производстве</a></li>
+					<li><a class="heart" href="#">Для поставщиков</a></li>
 					<li><a href="#">Наши документы</a></li>
+					<li><a href="#">О производстве</a></li>
 					<li><a href="#">Экологические стандарты</a></li>
 				</ul>
 			</section>
 			<section class="footer-copyright">
-				<a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+				<a class="btn-copyright" href="https://htmlacademy.ru">HTML Academy</a>
 				<p>Сделано в <a href="https://htmlacademy.ru">HTML Academy</a> © 2016</p>
 			</section>
 		</div>
