--- a/index.html
+++ b/index.html
@@ -35,9 +35,6 @@
 	</header>
 	<main class="container">
 	<div class="ad clearfix"><!--advertising реклама-->
-		<div class="choice-ice">
-			<h2>Крем-брюле и пломбир с малиновым джемом</h2>
-		</div>
 		<div class="page-choice">
 				<input type="radio" id="btn-1" name="check-1" value="1"> <!--label радио кнопкам надо или нет?-->
 				<input type="radio" id="btn-2" name="check-2" value="2">
@@ -47,29 +44,34 @@
 						<label for="btn-2"></label>
 						<label for="btn-3"></label>
 					</div>
-					 <div class="slider-inner">
+					<div class="slider-inner">
+						<div class="choice-ice">
+							<h2>Крем-брюле и пломбир с малиновым джемом</h2>
+						</div>
+						<div class="agitation">
+							<a href="#">Давайте оба!</a>
+							</div>
 						<div class="slider-slides">
 							<img src="img/advertising_1.png" alt="...">
 							<img src="img/advertising_2.png" alt="...">
 							<img src="img/advertising_3.png" alt="...">
+							
 						</div>
 					</div>
          </div>
-		<div class="agitation">
-			<a href="#">Давайте оба!</a>
-		</div>
+		
 	</div>
 	<!--Блок промо акции-->
 	<div class="promo clearfix">
 		<div class="promo-action">
-			<b>Малинка даром!</b>
+			<span>Малинка даром!</span>
 			<p>При покупке 2 кг любого фруктового мороженного, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-			<a href="#">Хочу варенье!</a>
+			<a class="btn-want-jam" href="#">Хочу варенье!</a>
 		</div>
 		<div class="promo-action">
-			<b>Шоколадки даром!</b>
+			<span>Шоколадки даром!</span>
 			<p>При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-			<a href="#">Хочу шоколадки!</a>
+			<a class="btn-want-choco" href="#">Хочу шоколадки!</a>
 		</div>
 	<!--/Блок промо акции-->
 	</div>
@@ -78,26 +80,26 @@
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
 			<img src="img/ice_1.jpg" width="267" height="267" alt="Сливочное с апельсиновым джемом и цитрусовой стружкой">
-			<b>310 <!--Какой символ рубля?-->/кг</b>
-			<p>Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
+			<span class="cost">310 <!--Какой символ рубля?-->/кг</span>
+			<p class="specification">Сливочное с апельсиновым джемом и цитрусовой стружкой</p><!--Это ссылка скорее?-->
 		</section>	
 		<section class="catalog-ice">
 		<span class="tag">ХИТ</span> <!--tag бирка, ярлык, признак, этикетка, ушко, наконечник-->
 			<img src="img/ice_2.jpg" width="267" height="267" alt="Сливочно-кофейное с кусочками шоколада">
-			<b>318 <!--Какой символ рубля?-->/кг</b>
-			<p>Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
+			<span class="cost">318 <!--Какой символ рубля?-->/кг</span>
+			<p class="specification">Сливочно-кофейное с кусочками шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
 			<img src="img/ice_3.jpg" width="267" height="267" alt="Сливочно-клубничное с присыпкой из белого шоколада">
-			<b>355 <!--Какой символ рубля?-->/кг</b>
-			<p>Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
+			<span class="cost">355 <!--Какой символ рубля?-->/кг</span>
+			<p class="specification">Сливочно-клубничное с присыпкой из белого шоколада</p><!--Это ссылка скорее?-->
 		</section>
 		<section class="catalog-ice">
 			<span class="tag">ХИТ</span>
 			<img src="img/ice_4.jpg" width="267" height="267" alt="Сливочное крем-брюле с карамельной подливкой">
-			<b>415 <!--Какой символ рубля?-->/кг</b>
-			<p>Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
+			<span class="cost">415 <!--Какой символ рубля?-->/кг</span>
+			<p class="specification">Сливочное крем-брюле с карамельной подливкой</p><!--Это ссылка скорее?-->
 		</section>
 	<!--/Блок самых покупаемых мороженных-->
 	</div>
@@ -124,7 +126,7 @@
 		</section>
 		<section class="sub">
 			<p>Подпишитесь на нашу сладкую рассылку и будете всегда в курсе всего самого вкусного, что у нас происходит. Обещаем не спамить и не слать всякой не нужной ерунды. Честно=)</p>
-			<form>
+			<form action="https://echo.htmlacademy.ru" method="get">
 				<input type="Text" name="email" placeholder="Электронная почта">
 				<button name="send">Отправить</button>
 			</form>
@@ -134,17 +136,19 @@
 	</main>
 	<!--Блок проезда-адреса-->
 	<div class="driving-address">
-		<!--<div class="marker"><!--<img src="img/marker.png" alt="Указатель местонахождения">
-		</div>-->
 		<div class="driving">
-          Адрес главного офиса и<br>
-		  Офлайн магазина<br>
-		  <strong>ул. Большая Конющенная<br>
-		  19/8б Санкт-Петербург</strong><br>
-		  Для заказов по телефону:<br>
-		  8 812 450-25-25<br>
-		  (с 10 до 20 ежедневно)<br>
-          <a href="#">Форма обратной связи</a>
+			<div class="line">
+			<span class="line-1">Адрес главного офиса и<br>
+								Офлайн магазина</span><br>
+			<span class="line-2">ул. Большая Конющенная<br>
+								19/8б Санкт-Петербург</span><br>
+			</div>
+			<div>
+			<span class="line-1">Для заказов по телефону:</span><br>
+			<span class="line-2">8 812 450-25-25</span><br>
+			<span class="line-1">(с 10 до 20 ежедневно)</span><br>
+			</div>
+			<a class="btn-feedback" href="#">Форма обратной связи</a>
 		</div>
 	<!--/Блок проезда-адреса-->	
 	</div>
